--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
         </header>
         <main>
             <h2>1-Магма v2</h2>
-        <img src="https://d1x91p7vw3vuq8.cloudfront.net/itemku-upload/2023921/d1uzoehvi0pq8mw5ybsev_thumbnail.jpg"; width=100px>
-            <p>У магмы очень большой урон
-            </p>
+            <img src="https://d1x91p7vw3vuq8.cloudfront.net/itemku-upload/2023921/d1uzoehvi0pq8mw5ybsev_thumbnail.jpg"; width=100px>
+            <p>У магмы очень большой урон</p>
             <h2>2-Близзард</h2>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-rqgihIrwJYak7NjnAx_HPcda5VY6v061MwfzQrg7GUIR__U_YI4CCMsMW9BcnTeqqxM&usqp=CAU"; width=100px>
-У близзарда большой урон и полет наносит урон
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-rqgihIrwJYak7NjnAx_HPcda5VY6v061MwfzQrg7GUIR__U_YI4CCMsMW9BcnTeqqxM&usqp=CAU"; width=100px>
+            <p>У близзарда большой урон и полет наносит урон</p>
             <h2>3-Мамонт</h2>  
-<img scr="https://static.wikia.nocookie.net/blox-fruits/images/9/9f/MammothB.png/revision/latest/scale-to-width/360?cb=20231028100119&path-prefix=ru"; width=100px>
-Его полет невоможно збить и при трансформацыи ему наносится меньше урона  
+            <img scr="https://static.wikia.nocookie.net/blox-fruits/images/9/9f/MammothB.png/revision/latest/scale-to-width/360?cb=20231028100119&path-prefix=ru"; width=100px>
+            <p>Его полет невоможно збить и при трансформацыи ему наносится меньше урона</p>  
             <h2>4-Свет v2</h2>
-У света можно попасть всеми скилами
+            <p></p>У света можно попасть всеми скилами</p>
             <h2>5-Лёд v2</h2> 
-Некоторые способности не защитуют
+            <p>Некоторые способности не защитуют</p>
         </main>
         <footer>
         </footer>
