--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <header>
+        <header style="background-color: grey;">
             <title>Топ фруктов для сб ханта</title>
             <h1>Топ фруктов в бф для сб ханта</h1>
         </header>
