--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>У близзарда большой урон и полет наносит урон
             </p>    
             <h2>3-Мамонт</h2>  
-<img scr="https://static.wikia.nocookie.net/blox-fruits/images/7/70/LightB.png/revision/latest/scale-to-width/360?cb=20231028095746&path-prefix=ru";>
+<img scr="https://static.wikia.nocookie.net/blox-fruits/images/b/b2/MammothA.png/revision/latest?cb=20231027203931&path-prefix=ru";>
             <p>Его полет невоможно збить и при трансформацыи ему наносится меньше урона
             </p>      
             <h2>4-Свет v2</h2>
