--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             </p>    
         </main>
         <footer>
+            <p>
+             Цей сайт створив Чабан Сашко   
+            </p>
         </footer>
 
     </body>
